2009-07-23  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with Python 2.5, bringing back the warnings for others.

	* glom/libglom/python_embed/py_glom_record.cc:
	* glom/libglom/python_embed/py_glom_related.cc:
	* glom/libglom/python_embed/py_glom_relatedrecord.cc:
	* glom/libglom/python_embed/pygdavalue_conversions.c: Remove the extra 
	struct field initialization to fix the build with Python 2.5.

2009-07-23  Daniel Elstner  <danielk@openismus.com>

	Make libegg object files depend on eggmarshalers

	* Makefile.am ($(*libegg*_a_OBJECTS)): Make all object files of
	libeggutil.a and libeggtoolpalette.a depend on the generated source
	files eggmarshalers.[ch].  This ensures that the marshaler files are
	generated before any of the libegg objects are compiled, but avoids
	having to resort to BUILT_SOURCES for that purpose.
	(*_libeggtoolpalette_a_LIBADD): Remove dependency on libeggutil.a
	again, as it is not required for linking the static library itself.

2009-07-23  Daniel Elstner  <danielk@openismus.com>

	* Makefile.am (*_libeggtoolpalette_a_LIBADD): List libeggutil.a as
	dependency.

2009-07-23  Daniel Elstner  <danielk@openismus.com>

	* glom/bakery/app_withdoc.cc: Fix build with -Werror.
	* glom/dialog_import_csv.cc: ditto,
	* glom/libglom/python_embed/py_glom_record.cc: ditto,
	* glom/libglom/python_embed/py_glom_related.cc: ditto,
	* glom/libglom/python_embed/py_glom_relatedrecord.cc: ditto,
	* glom/libglom/python_embed/pygdavalue_conversions.c: ditto,
	* glom/mode_design/fields/dialog_fielddefinition.cc: ditto,
	* glom/utility_widgets/dialog_image_progress.cc: ditto.

2009-07-23  Daniel Elstner  <danielk@openismus.com>

	Switch to non-recursive build process

	* macros/mm-pkg.m4: New file, defining the MM_PKG_CONFIG_SUBST macro.
	* macros/mm-python.m4: New file, defining the MM_CHECK_MODULE_PYTHON
	macro to replace the old and messy AM_CHECK_PYTHON_HEADERS.
	* acinclude.m4: Remove file which defined AM_CHECK_PYTHON_HEADERS.
