@@ -1,3 +1,13 @@
+2009-07-24  Murray Cumming  <murrayc@murrayc.com>
+
+	Use CONNECTION_OPTIONS_SQL_IDENTIFIERS_CASE_SENSITIVE.
+
+	* glom/libglom/connectionpool_backends/postgres.cc:
+	* glom/libglom/connectionpool_backends/sqlite.cc: When calling 
+	Gda::Connection::open_from_string(), use the new 
+	CONNECTION_OPTIONS_SQL_IDENTIFIERS_CASE_SENSITIVE option so the libgda 
+	API really does what we mean without needing any weird quoting.
+
 2009-07-23  Murray Cumming  <murrayc@murrayc.com>
 
 	Fix the build with Python 2.5, bringing back the warnings for others.
